7-Ingress/deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: formation-service
spec:
  selector:
    app: formation
  ports:
  - name: formation-service
  # Default port used by the image
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formation
spec:
  selector:
    matchLabels:
      app: formation
  replicas: 2
  template:
    metadata:
      labels:
        editor: vscode
        app: formation
    spec:
      containers:
      - name: formation
        image: formation
        ports:
        - containerPort: 80
